dark mode fix

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,10 +1,10 @@
 body {
 	@apply bg-gray-100 font-sans;
+	@apply dark:bg-black;
 }
 
 .main {
 	@apply p-4 max-w-xl m-auto;
 
-	@apply bg-white shadow-sm;
-	@apply dark:bg-gray-800;
+	@apply bg-white shadow-sm dark:bg-gray-800;
 }
